# tfg-code

./: .gitignore  Makefile  sphere_data.txt  todo.md
cpp-RayTracer/: CMakeLists.txt
cpp-RayTracer/scenes/: random_scene.txt
cpp-RayTracer/src/: camera.h  camera.hpp  color.h  color.hpp  hittable.hpp  hittable_list.hpp  image.h  image.hpp  interval.h  interval.hpp  main.cc  main.cpp  material.h  material.hpp  ray.h  ray.hpp  rtweekend.h  rtweekend.hpp  sphere.h  sphere.hpp  vec3.hpp
cuda-RayTracer/: Makefile
cuda-RayTracer/src/: camera.cuh  color.cuh  hittable.cuh  hittable_list.cuh  image.cuh  interval.cuh  main.cu  material.cuh  ray.cuh  rtweekend.cuh  sphere.cuh  vec3.cuh
go-RayTracer/: camera.go  color.go  go.mod  hittable.go  hittable_list.go  image.go  interval.go  main.go  material.go  ray.go  rtweekend.go  sphere.go  vec3.go
helpers/: ppm_diff.cpp
perceptron/cpp/: main.cpp  multilayer_perceptron.cpp  multilayer_perceptron.h
perceptron/go/: main.go  multilayer_perceptron.go  perceptron
perceptron/python/: main.py
perceptron/rust/src/: main.rs  multilayer_perceptron.rs
powermetrics/: readme.md
py-RayTracer/: camera.py  color.py  hittable.py  hittable_list.py  image.py  interval.py  main.py  material.py  ray.py  rtweekend.py  sal.ppm  sphere.py  vec3.py
python-Raytracer/: camera.py  color.py  hittable.py  image.py  main.py  material.py  random_scene.txt  ray.py  utils.py  vec3.py
pythonRaytracer/: main.py  material.py  ray.py  vector.py
report/: report.tex
rust-Raytracer/src/: camera.rs  color.rs  hittable.rs  lib.rs  main.rs  material.rs  ray.rs  vec3.rs
rustRaytracer/: Cargo.toml
rustRaytracer/src/: camera.rs  image.rs  main.rs  material.rs  utils.rs
utilities/: clean_macos.sh  macos_to_jules.py  test-cores-vs-goroutines.sh
